cmake_minimum_required(VERSION 3.17)
project(umbf-viewer
    VERSION 0.0.1
    LANGUAGES CXX C
)

set(APP_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_SYSTEM_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${APP_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${APP_LIB_DIR})

set(ALWF_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/modules/alwf)
set(ALWF_PUBLIC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/public)
set(ALWF_VIEWS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/views)
set(ALWF_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(ALWF_MANIFEST_DEPS libumbf:${UMBF_VERSION})
set(ALWF_FRONTEND_DISABLE ON CACHE BOOL "Disable ALWF frontend installation")

include(${ALWF_ROOT_DIR}/alwf.cmake)
add_subdirectory(modules/umbf)

target_link_libraries(${PROJECT_NAME} PRIVATE umbf)